<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable name="nextFragmentViewModel"
                type="com.uramonk.androidtemplateapp.presentation.viewmodel.NextFragmentViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <TextView android:id="@+id/next_fragment_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="Next Fragment"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintTop_creator="1" />
    </android.support.constraint.ConstraintLayout>
</layout>